fix(css): standardize spacing and alignment in section styles

--- a/src/assets/styles/pages/home_css/sections/section-2/_container.css
+++ b/src/assets/styles/pages/home_css/sections/section-2/_container.css
@@ -1,11 +1,12 @@
-.section-history{
+.section-history {
   border-bottom: 1px var(--background-color) solid;
   background-color: var(--background-color);
-  border-radius:0 0 1rem 1rem;
+  border-radius: 0 0 1rem 1rem;
   position: relative;
   overflow: hidden;
   padding-bottom: 1.9rem;
 }
+
 .history-section-title {
   font-family: var(--f-title);
   font-size: 2.5rem;
@@ -16,6 +17,7 @@
   text-align: center;
   margin-bottom: 1.5rem;
 }
+
 .history-section-title::after {
   content: "";
   display: block;
@@ -24,19 +26,30 @@
   background: var(--space-color);
   margin: 0.5rem auto 0;
 }
+
 .columns-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
   gap: 3rem;
+  -webkit-gap: 3rem;
 }
 
 .col-text {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
   flex: 1;
   min-width: 45%;
 }
 
 @media (max-width: 992px) {
   .columns-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
   }
 }
